--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
@@ -38,19 +38,9 @@
         <None Include="..\..\build\readme-nuget-main.md" Pack="true" PackagePath="README.md" />
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="10.3.0" />
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="10.3.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="11.0.0" />
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="11.0.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="13.0.0" />
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="13.0.0" />
+    <ItemGroup>
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="[13.0.0, 14)" />
+        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="[13.0.0, 14)" />
     </ItemGroup>
 
     <ItemGroup>
