Fixes after `dev/v5.x` rebase

--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -41,8 +41,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="[13.2.0, 14)" />
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="[13.2.0, 14)" />
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="14.0.0--preview003" />
+        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="14.0.0--preview003" />
     </ItemGroup>
 
     <ItemGroup>
