chore: ignore rider related files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ src/Umbraco.Cms.*.x/*
 src/Umbraco.Community.Contentment/wwwroot/App_Plugins/Contentment/*
 src/*/node_modules/*
 tools/*.exe
+src/.idea
