Adds Content Blocks editor to Media and Member types
for testing purposes.

--- a/src/Umbraco.Cms.13.x/uSync/v9/MediaTypes/umbracomediaarticle.config
+++ b/src/Umbraco.Cms.13.x/uSync/v9/MediaTypes/umbracomediaarticle.config
@@ -13,6 +13,21 @@
   </Info>
   <GenericProperties>
     <GenericProperty>
+      <Key>8a7f9386-1f9a-485e-9e73-878fe8ea7010</Key>
+      <Name>Content Blocks</Name>
+      <Alias>contentBlocks</Alias>
+      <Definition>dd383342-d4f9-458d-8325-bb93f9a51183</Definition>
+      <Type>Umbraco.Community.Contentment.ContentBlocks</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>-1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>00000030-0000-0000-0000-000000000000</Key>
       <Name>Size</Name>
       <Alias>umbracoBytes</Alias>
@@ -60,6 +75,13 @@
   </GenericProperties>
   <Structure />
   <Tabs>
+    <Tab>
+      <Key>5d93dca4-3018-4278-9790-593e003a2f53</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Group</Type>
+      <SortOrder>-1</SortOrder>
+    </Tab>
     <Tab>
       <Key>9af3bd65-f687-4453-9518-5f180d1898ec</Key>
       <Caption>Article</Caption>
