--- a/src/Umbraco.Cms.13.x/uSync/v9/MemberTypes/member.config
+++ b/src/Umbraco.Cms.13.x/uSync/v9/MemberTypes/member.config
@@ -13,6 +13,24 @@
   </Info>
   <GenericProperties>
     <GenericProperty>
+      <Key>93d69607-6365-4ea0-8180-578c73bdc18d</Key>
+      <Name>Content Blocks</Name>
+      <Alias>contentBlocks</Alias>
+      <Definition>dd383342-d4f9-458d-8325-bb93f9a51183</Definition>
+      <Type>Umbraco.Community.Contentment.ContentBlocks</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>-1</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <CanEdit>false</CanEdit>
+      <CanView>false</CanView>
+      <IsSensitive>false</IsSensitive>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>e79dccfb-0000-0000-0000-000000000000</Key>
       <Name>Is Approved</Name>
       <Alias>umbracoMemberApproved</Alias>
@@ -147,6 +165,13 @@
       <Alias>membership</Alias>
       <Type>Group</Type>
       <SortOrder>1</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>76e8ec57-d91e-4b01-88aa-7e716685c2e8</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Group</Type>
+      <SortOrder>-1</SortOrder>
     </Tab>
   </Tabs>
 </MemberType>
