Upgraded to umb-backoffice beta002
Note: The old (AngularJS) backoffice code was removed,
so there were many breaking-changes to temporarily patch.

--- a/src/Umbraco.Cms.14.x/Umbraco.Cms.14.x.csproj
+++ b/src/Umbraco.Cms.14.x/Umbraco.Cms.14.x.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms" Version="14.0.0--preview005" />
+        <PackageReference Include="Umbraco.Cms" Version="14.0.0-beta002" />
     </ItemGroup>
 
     <ItemGroup>
