--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -41,8 +41,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms.Web.Website" Version="14.0.0--preview005" />
-        <PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="14.0.0--preview005" />
+        <PackageReference Include="Umbraco.Cms.Core" Version="14.0.0-beta002" />
+        <PackageReference Include="Umbraco.Cms.Web.Website" Version="14.0.0-beta002" />
     </ItemGroup>
 
     <ItemGroup>
