--- a/src/Umbraco.Community.Contentment/package.json
+++ b/src/Umbraco.Community.Contentment/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^2.8.0"
+    "lit": "^3.1.2"
   },
   "devDependencies": {
-    "@umbraco-cms/backoffice": "^14.0.0--preview005",
+    "@umbraco-cms/backoffice": "^14.0.0-beta002",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11"
+    "vite": "^5.1.1"
   }
 }
