Updated ignore rules
for work on Bellissima version

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ build/build-push-umb.ps1
 src/packages/*/**
 src/Umbraco.Cms.*.x/*
 src/Umbraco.Community.Contentment/wwwroot/App_Plugins/Contentment/*
+src/Umbraco.Community.Contentment.StaticAssets/*
 tools/*.exe
