Added uSync test files
(cherry picked from commit 98c2ec5acee1ba6916675fb64d6b408cce49af8e)

--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
@@ -40,6 +40,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>45248546-4d6c-4418-92e9-855c3aac8328</Key>
+      <Name>Data Picker - uCssClassName</Name>
+      <Alias>dataPickerUCssClassName</Alias>
+      <Definition>d4b190f2-e2a6-470c-a39f-8e1ae14d521c</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>a290a9de-0b71-49b7-9572-0bf541525469</Key>
       <Name>Data Picker - Umbraco Content</Name>
       <Alias>dataPickerUmbracoContent</Alias>
