--- a/src/Umbraco.Cms.13.x/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.13.x/uSync/v9/ContentTypes/testmiscpage.config
@@ -40,6 +40,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>2f56d9fd-2066-4905-9c2e-8e29c657fe10</Key>
+      <Name>Data Picker - uCssClassName</Name>
+      <Alias>dataPickerUCssClassName</Alias>
+      <Definition>882e9021-789a-412c-ac26-9818df51c647</Definition>
+      <Type>Umbraco.Community.Contentment.DataPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="dataPicker">Data Picker</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>a290a9de-0b71-49b7-9572-0bf541525469</Key>
       <Name>Data Picker - Umbraco Content</Name>
       <Alias>dataPickerUmbracoContent</Alias>
