--- a/src/Umbraco.Community.Contentment.StaticAssets/Client/package.json
+++ b/src/Umbraco.Community.Contentment.StaticAssets/Client/package.json
@@ -11,7 +11,7 @@
     "lit": "^3.1.2"
   },
   "devDependencies": {
-    "@umbraco-cms/backoffice": "^14.0.0-beta002",
+    "@umbraco-cms/backoffice": "^14.0.0-rc1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
