--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -39,6 +39,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Umbraco.Cms.Api.Management" Version="14.0.0-rc1" />
         <PackageReference Include="Umbraco.Cms.Core" Version="14.0.0-rc1" />
         <PackageReference Include="Umbraco.Cms.Web.Website" Version="14.0.0-rc1" />
     </ItemGroup>
