--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -17,7 +17,7 @@
         <Version>5.0.0-develop</Version>
         <Authors>Lee Kelleher</Authors>
         <Company>Lee Kelleher</Company>
-        <Copyright>2019 © Lee Kelleher</Copyright>
+        <Copyright>$([System.DateTime]::Now.Year) © $(Company)</Copyright>
         <PackageId>Umbraco.Community.Contentment</PackageId>
         <PackageIcon>icon.png</PackageIcon>
         <PackageLicenseExpression>MPL-2.0</PackageLicenseExpression>
@@ -26,6 +26,8 @@
         <PackageTags>umbraco umbraco-marketplace</PackageTags>
         <RepositoryUrl>https://github.com/leekelleher/umbraco-contentment</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
     <ItemGroup>
@@ -55,7 +57,7 @@
         </ItemGroup>
     </Target>
 
-    <Target Name="ContentmentPrepareAssets" BeforeTargets="DispatchToInnerBuilds">
+    <Target Name="ContentmentPrepareAssets" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)' == 'Release'">
         <Exec Command="npm run build" />
     </Target>
 
