--- a/src/Umbraco.Cms.14.x/Umbraco.Cms.14.x.csproj
+++ b/src/Umbraco.Cms.14.x/Umbraco.Cms.14.x.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Umbraco.Cms" Version="14.0.0-rc3" />
+        <PackageReference Include="Umbraco.Cms" Version="14.0.0" />
     </ItemGroup>
 
     <ItemGroup>
