--- a/src/Umbraco.Community.Contentment.StaticAssets/Client/package.json
+++ b/src/Umbraco.Community.Contentment.StaticAssets/Client/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.42.1",
-    "@umbraco-cms/backoffice": "^14.0.0-rc3",
+    "@umbraco-cms/backoffice": "^14.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
