--- a/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
+++ b/src/Umbraco.Community.Contentment/Umbraco.Community.Contentment.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <StaticWebAssetBasePath>/</StaticWebAssetBasePath>
     </PropertyGroup>
 
     <!-- NuGet package metadata -->
@@ -45,19 +46,24 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Remove="node_modules\**;wwwroot\**" />
-        <EmbeddedResource Remove="node_modules\**;wwwroot\**" />
-        <None Remove="node_modules\**;wwwroot\**" />
+        <Content Remove="Client\**" />
+        <None Include="Client\public\umbraco-package.json" Pack="false" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Umbraco.Community.Contentment.StaticAssets\Umbraco.Community.Contentment.StaticAssets.csproj" />
+        <Compile Remove="node_modules\**;wwwroot\**" />
+        <EmbeddedResource Remove="node_modules\**;wwwroot\**" />
+        <None Remove="node_modules\**;wwwroot\**" />
     </ItemGroup>
 
     <Target Name="RemoveLuceneAnalyzer" BeforeTargets="CoreCompile">
         <ItemGroup>
             <Analyzer Remove="@(Analyzer)" Condition="%(FileName) == 'Lucene.Net.CodeAnalysis.CSharp'" />
         </ItemGroup>
+    </Target>
+
+    <Target Name="ContentmentPrepareAssets" BeforeTargets="PreBuildEvent" Condition="'$(Configuration)' == 'Release'">
+        <Exec Command="npm run build" WorkingDirectory="Client" />
     </Target>
 
 </Project>
