Upgraded to Umbraco 15 / .NET 9
Fixed breaking changes

--- a/src/Umbraco.Community.Contentment/Client/tsconfig.json
+++ b/src/Umbraco.Community.Contentment/Client/tsconfig.json
@@ -20,7 +20,8 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
-		"noImplicitReturns": true
+		"noImplicitReturns": true,
+		"types": ["@umbraco-cms/backoffice/extension-types"]
 	},
 	"include": ["src"]
 }
