--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,9 @@ name: Release Package
 
 on:
   push:
-    branches:
-      - main
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
+      - "![0-9]+.[0-9]+.[0-9]+-*"
 
 jobs:
   build:
@@ -29,4 +28,4 @@ jobs:
       run: dotnet nuget push **\*.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
 
     - name: Push to GitHub NuGet
-      run: dotnet nuget push **\*.nupkg -k ${{secrets.GITHUB_TOKEN}} -s https://nuget.pkg.github.com/leekelleher/index.json
+      run: dotnet nuget push **\*.nupkg -k ${{secrets.LK_GITHUB_PAT}} -s https://nuget.pkg.github.com/leekelleher/index.json
