:notebook: Updated README
+ other meta files.

--- a/.github/workflows/bleeding-edge.yml
+++ b/.github/workflows/bleeding-edge.yml
@@ -11,6 +11,10 @@ jobs:
 
     runs-on: windows-latest
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
 
     - name: Checkout repository
@@ -25,4 +29,4 @@ jobs:
       run: dotnet pack src\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj -c Release /p:Version=${{github.ref_name}}
 
     - name: Push to GitHub NuGet
-      run: dotnet nuget push **\*.nupkg -k ${{secrets.LK_GITHUB_PAT}} -s https://nuget.pkg.github.com/leekelleher/index.json
+      run: dotnet nuget push **\*.nupkg -k ${{secrets.GITHUB_TOKEN}} -s https://nuget.pkg.github.com/leekelleher/index.json
