--- a/src/Umbraco.Community.Contentment.Client/tsconfig.json
+++ b/src/Umbraco.Community.Contentment.Client/tsconfig.json
@@ -26,7 +26,8 @@
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
 		"paths": {
-			"@umbraco-community/contentment": ["./src/index.ts"]
+			"@umbraco-community/contentment": ["./src/index.ts"],
+			"@umbraco-community/backoffice/external/sortablejs": ["./src/sortablejs.ts"]
 		},
 		"types": ["@umbraco-cms/backoffice/extension-types"]
 	},
