--- a/src/Umbraco.Cms.16.x/uSync/v16/Content/umbraco-property-editors.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/Content/umbraco-property-editors.config
@@ -249,7 +249,34 @@
       "contentTypeKey": "d4e818a8-1fec-4cb5-8cbc-d8936a58caf6",
       "key": "14f6afbe-ea74-4fe1-8a3a-7e53d31e531a",
       "udi": null,
-      "values": []
+      "values": [
+        {
+          "alias": "templatedLabelJson",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "name": "Ready",
+              "value": "value1",
+              "icon": "icon-stop-alt color-red",
+              "description": "One for the money."
+            },
+            {
+              "name": "Steady",
+              "value": "value2",
+              "icon": "icon-stop-alt color-orange",
+              "description": "Two for the show."
+            },
+            {
+              "name": "Go!",
+              "value": "value3",
+              "icon": "icon-stop-alt color-green",
+              "description": "Three to get ready. Now go, cat, go."
+            }
+          ]
+        }
+      ]
     },
     {
       "contentTypeKey": "fb4fc78f-53d6-4c41-a669-d5f78c072edf",
