--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/TemplatedLabelJSON.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/TemplatedLabelJSON.config
@@ -16,7 +16,7 @@
   "manifest": [
     "Umb.SearchResultItem.Document"
   ],
-  "notes": "\u003Ccontentment-info-box type=\u0022divider\u0022\u003E\n    \u003Cdetails open\u003E\n        \u003Csummary\u003ETemplated Label\u003C/summary\u003E\n        \u003Cpre\u003E\u003Ccode\u003E{{ model.value | json }}\u003C/code\u003E\u003C/pre\u003E\n        \u003Cul\u003E\n        {% for item in model.value %}\n            \u003Cli\u003E{{ item }}\u003C/li\u003E\n        {% endfor %}\n        \u003C/ul\u003E\n    \u003C/details\u003E\n\u003C/contentment-info-box\u003E\n",
+  "notes": "\u003Ccontentment-info-box type=\u0022warning\u0022\u003E\n    \u003Cdetails open\u003E\n        \u003Csummary\u003ETemplated Label\u003C/summary\u003E\n        \u003Cumb-code-block language=\u0022JSON\u0022 copy\u003E{{ model.value | json:2 }}\u003C/umb-code-block\u003E\n        \u003Cul\u003E\n        {% for item in model.value %}\n            \u003Cli\u003E{{ item.name }}\u003C/li\u003E\n        {% endfor %}\n        \u003C/ul\u003E\n    \u003C/details\u003E\n\u003C/contentment-info-box\u003E\n",
   "umbracoDataValueType": "JSON"
 }]]></Config>
 </DataType>
