--- a/src/Umbraco.Community.Contentment.Client/package.json
+++ b/src/Umbraco.Community.Contentment.Client/package.json
@@ -10,6 +10,7 @@
 		"generate:server-api": "openapi-ts --file openapi-ts.config.js"
 	},
 	"dependencies": {
+		"liquidjs": "^10.22.0",
 		"sortablejs": "^1.15.6"
 	},
 	"peerDependencies": {
