Incremented version number, v5.1.1

--- a/src/Umbraco.Community.Contentment/package.json
+++ b/src/Umbraco.Community.Contentment/package.json
@@ -1,7 +1,7 @@
 {
     "name": "umbraco-community-contentment",
     "private": true,
-    "version": "5.0.0-develop",
+    "version": "5.1.1",
     "scripts": {
         "dev": "gulp watch",
         "build": "gulp build"
