--- a/src/Umbraco.Community.Contentment.Client/package.json
+++ b/src/Umbraco.Community.Contentment.Client/package.json
@@ -6,16 +6,17 @@
 	"scripts": {
 		"dev": "tsc && vite build --watch",
 		"build": "tsc && vite build",
-		"generate:server-api": "openapi-ts"
+		"generate:server-api": "openapi-ts --file openapi-ts.config.js"
 	},
 	"dependencies": {
 		"sortablejs": "^1.15.6"
 	},
 	"devDependencies": {
-		"@hey-api/openapi-ts": "^0.57.1",
+		"@hey-api/client-fetch": "^0.10.0",
+		"@hey-api/openapi-ts": "^0.66.6",
 		"@types/sortablejs": "^1.15.8",
-		"@umbraco-cms/backoffice": "^15.3.0",
-		"typescript": "^5.8.2",
-		"vite": "^5.4.14"
+		"@umbraco-cms/backoffice": "^16.0.0-rc3",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.5"
 	}
 }
