--- a/src/Umbraco.Cms.16.x/appsettings.Development.json
+++ b/src/Umbraco.Cms.16.x/appsettings.Development.json
@@ -29,7 +29,7 @@
         "Debug": true
       },
       "ModelsBuilder": {
-        "ModelsMode": "SourceCodeManual"
+        "ModelsMode": "Nothing"
       },
       "RuntimeMinification": {
         "UseInMemoryCache": true,
