Re-exported uSync files

--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataFileSystem.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataFileSystem.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="5f6a081b-0145-400d-b8d9-4b0d9266a4b6" Alias="[Contentment] Data List - Data Number Range" Level="2">
+<DataType Key="dec9a23a-f49b-4f51-9231-23ad05a95beb" Alias="Data List: Data File System" Level="2">
   <Info>
-    <Name>[Contentment] Data List - Data Number Range</Name>
+    <Name>Data List: Data File System</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List</Folder>
@@ -9,12 +9,11 @@
   <Config><![CDATA[{
   "dataSource": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.NumberRangeDataListSource, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.PhysicalFileSystemDataSource, Umbraco.Community.Contentment",
       "value": {
-        "start": 1,
-        "end": 5,
-        "step": 1,
-        "decimals": "0"
+        "path": "~/css",
+        "filter": "*.css",
+        "friendlyName": true
       }
     }
   ],
