--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataSQL.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataSQL.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="a57a0bc0-732f-4d00-8fa0-6635b4de28f4" Alias="[Contentment] Data List - Data SQL" Level="2">
+<DataType Key="a57a0bc0-732f-4d00-8fa0-6635b4de28f4" Alias="Data List: Data SQL" Level="2">
   <Info>
-    <Name>[Contentment] Data List - Data SQL</Name>
+    <Name>Data List: Data SQL</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List</Folder>
@@ -11,7 +11,7 @@
     {
       "key": "Umbraco.Community.Contentment.DataEditors.SqlDataListSource, Umbraco.Community.Contentment",
       "value": {
-        "query": "SELECT\r\n\t[text],\r\n\t[uniqueId]\r\nFROM\r\n\t[umbracoNode]\r\nWHERE\r\n\t[nodeObjectType] = \u0027C66BA18E-EAF3-4CFF-8A22-41B16D66A972\u0027\r\n\tAND\r\n\t[level] = 3\r\nORDER BY\r\n\t[sortOrder] ASC\r\n;",
+        "query": "SELECT\r\n\t[text],\r\n\t[uniqueId]\r\nFROM\r\n\t[umbracoNode]\r\nWHERE\r\n\t[nodeObjectType] = \u0027C66BA18E-EAF3-4CFF-8A22-41B16D66A972\u0027\r\n\tAND\r\n\t[level] = 1\r\nORDER BY\r\n\t[sortOrder] ASC\r\n;",
         "connectionString": "umbracoDbDSN"
       }
     }
@@ -20,9 +20,10 @@
     {
       "key": "Umbraco.Community.Contentment.DataEditors.RadioButtonListDataListEditor, Umbraco.Community.Contentment",
       "value": {
-        "showDescriptions": "0",
-        "showIcons": "0",
-        "allowClear": "0"
+        "orientation": "horizontal",
+        "showDescriptions": false,
+        "showIcons": false,
+        "allowClear": false
       }
     }
   ]
