--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataTextDelimited.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataTextDelimited.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="8ac69d41-32e9-4ad1-b49b-215216ea2279" Alias="[Contentment] Data List - Data JSON" Level="2">
+<DataType Key="e1a466ca-74ef-4f35-87aa-748fc290c895" Alias="Data List: Data Text Delimited" Level="2">
   <Info>
-    <Name>[Contentment] Data List - Data JSON</Name>
+    <Name>Data List: Data Text Delimited</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List</Folder>
@@ -9,14 +9,14 @@
   <Config><![CDATA[{
   "dataSource": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.JsonDataListSource, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.TextDelimitedDataListSource, Umbraco.Community.Contentment",
       "value": {
-        "url": "https://leekelleher.com/umbraco/contentment/data.json",
-        "itemsJsonPath": "$[*]",
-        "nameJsonPath": "$.name",
-        "valueJsonPath": "$.value",
-        "iconJsonPath": "$.icon",
-        "descriptionJsonPath": "$.description"
+        "url": "https://leekelleher.com/umbraco/contentment/data.csv",
+        "delimiter": ",",
+        "nameIndex": 0,
+        "valueIndex": 1,
+        "iconIndex": 2,
+        "descriptionIndex": 3
       }
     }
   ],
@@ -26,7 +26,7 @@
       "value": {
         "showDescriptions": "1",
         "showIcons": "1",
-        "allowClear": "1"
+        "allowClear": "0"
       }
     }
   ]
