--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataUserDefined.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataUserDefined.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="a4d45ecc-eed6-4b53-9f83-8282e9bfcfc1" Alias="[Contentment] Data List - Data User-defined" Level="2">
+<DataType Key="a4d45ecc-eed6-4b53-9f83-8282e9bfcfc1" Alias="Data List: Data User-defined" Level="2">
   <Info>
-    <Name>[Contentment] Data List - Data User-defined</Name>
+    <Name>Data List: Data User-defined</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List</Folder>
