--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataXML.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataXML.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="e1a466ca-74ef-4f35-87aa-748fc290c895" Alias="[Contentment] Data List - Data Text Delimited" Level="2">
+<DataType Key="5448fd87-723a-4092-9894-2c3e9860bb0c" Alias="Data List: Data XML" Level="2">
   <Info>
-    <Name>[Contentment] Data List - Data Text Delimited</Name>
+    <Name>Data List: Data XML</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List</Folder>
@@ -9,14 +9,14 @@
   <Config><![CDATA[{
   "dataSource": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.TextDelimitedDataListSource, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.XmlDataListSource, Umbraco.Community.Contentment",
       "value": {
-        "url": "https://leekelleher.com/umbraco/contentment/data.csv",
-        "delimiter": ",",
-        "nameIndex": 0,
-        "valueIndex": 1,
-        "iconIndex": 2,
-        "descriptionIndex": 3
+        "url": "https://leekelleher.com/umbraco/contentment/data.xml",
+        "itemsXPath": "/items/item",
+        "nameXPath": "@name",
+        "valueXPath": "@value",
+        "iconXPath": "@icon",
+        "descriptionXPath": "@description"
       }
     }
   ],
