--- a/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataJSON.config
+++ b/src/Umbraco.Cms.16.x/uSync/v16/DataTypes/DataListDataJSON.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<DataType Key="5448fd87-723a-4092-9894-2c3e9860bb0c" Alias="[Contentment] Data List - Data XML" Level="2">
+<DataType Key="8ac69d41-32e9-4ad1-b49b-215216ea2279" Alias="Data List: Data JSON" Level="2">
   <Info>
-    <Name>[Contentment] Data List - Data XML</Name>
+    <Name>Data List: Data JSON</Name>
     <EditorAlias>Umbraco.Community.Contentment.DataList</EditorAlias>
     <EditorUIAlias>Umb.Contentment.PropertyEditorUi.DataList</EditorUIAlias>
     <Folder>Data+List</Folder>
@@ -9,14 +9,14 @@
   <Config><![CDATA[{
   "dataSource": [
     {
-      "key": "Umbraco.Community.Contentment.DataEditors.XmlDataListSource, Umbraco.Community.Contentment",
+      "key": "Umbraco.Community.Contentment.DataEditors.JsonDataListSource, Umbraco.Community.Contentment",
       "value": {
-        "url": "https://leekelleher.com/umbraco/contentment/data.xml",
-        "itemsXPath": "/items/item",
-        "nameXPath": "@name",
-        "valueXPath": "@value",
-        "iconXPath": "@icon",
-        "descriptionXPath": "@description"
+        "url": "https://leekelleher.com/umbraco/contentment/data.json",
+        "itemsJsonPath": "$[*]",
+        "nameJsonPath": "$.name",
+        "valueJsonPath": "$.value",
+        "iconJsonPath": "$.icon",
+        "descriptionJsonPath": "$.description"
       }
     }
   ],
@@ -26,7 +26,7 @@
       "value": {
         "showDescriptions": "1",
         "showIcons": "1",
-        "allowClear": "0"
+        "allowClear": "1"
       }
     }
   ]
